cambios en JS y CSS

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("https://images.pexels.com/photos/796606/pexels-photo-796606.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-  opacity: 5;
+  opacity: 4;
   background-size: cover;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -12,6 +12,7 @@ h1 {
 h2 {
   text-align: center;
   justify-content: center;
+  font-size: 24px;
 }
 
 footer {
